@@ -1,13 +1,14 @@
 package edu.dosw.application;
 
+import edu.dosw.application.exceptions.ApplicationLayerExceptions;
 import edu.dosw.domain.model.ConversationMessage;
 import edu.dosw.domain.ports.inbound.FilterMessagesUseCase;
 import edu.dosw.domain.ports.outbound.ConversationRepository;
-
+import edu.dosw.infrastructure.persistence.mongodb.exceptions.MongoPersistenceExceptions;
+import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
+@Service
 public class FilterMessagesUseCaseImpl implements FilterMessagesUseCase {
 
     private final ConversationRepository conversationRepository;
@@ -18,10 +19,21 @@ public class FilterMessagesUseCaseImpl implements FilterMessagesUseCase {
 
     @Override
     public List<ConversationMessage> execute(String conversationId, String filterWord) {
-        return conversationRepository.findConversationById(conversationId)
-                .getMessages()
+        try {
+        List<ConversationMessage> conversationMessages = conversationRepository.findConversationById(conversationId)
+                .getMessages();
+        if (filterWord == null || filterWord.trim().isEmpty()) {
+            return conversationMessages;
+        }
+        return conversationMessages
                 .stream()
                 .filter(c -> c.getText().contains(filterWord))
-                .collect(Collectors.toList());
+                .toList();
+        } catch (MongoPersistenceExceptions e) {
+            throw ApplicationLayerExceptions.conversationNotFound();
+        }
+
+
+
     }
 }
